# ai-vibe-engineer

./: .gitignore  README.md
03 Codex and Antigravity/antigravity_kanban/: implementation_plan.md  scratchpad_g15gnh82.md
04 Choosing right LLM/portfolio-site/: review.md
05 Capston Project ( PM Kanban App with AI Chatbot)/pm-docker-fastapi/: .dockerignore  .gitignore  docker-compose.yml  notes.txt  prompts.txt  pytest.ini
antigravity_kanban/: walkthrough.md
codex_kanban/: .gitignore
codex_kanban/frontend/: package.json
copilot_kanban/: QUICK_REFERENCE.md
copilot_kanban/frontend/: package-lock.json
copilot_kanban/frontend/pages/: index.tsx
cursor_kanban/: kanban_mvp_implementation.plan.md
cursor_kanban/frontend/: README.md  package-lock.json  package.json
instant_starter/: prompt.txt  style.css
pm-docker-fastapi/: AGENTS.md  Dockerfile  README.md  docker-compose.yml
pm-docker-fastapi/backend/: AGENTS.md  README.md  ai.py  auth.py  board_mutations.py  crud.py  database.py  main.py  models.py  pyproject.toml
pm-docker-fastapi/docs/: DATABASE.md  PLAN.md  PLAN_SIGNOFF.md  README.md  schema.json
pm-docker-fastapi/frontend/: AGENTS.md  README.md  playwright.config.ts
pm-docker-fastapi/scripts/: AGENTS.md  README.md  start.sh
pm-docker-fastapi/testing/: README.md
portfolio-site/: .gitignore  prompt.txt  tutorial.md
site/: prompt.txt
site/antigravity_kanban/: scratchpad_pg9w8lwc.md
site/codex_kanban/: README.md
site/copilot_kanban/: DELIVERY_SUMMARY.md  README.md
site/instant_starter/: game.js  index.html
site/web/: package-lock.json
(+101 files in other folders)
